# redbrick-sdk

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  interactive_test.py  main.py  pyproject.toml  redbrick_export_segment.json  requirements-dev._txt  requirements-dev.txt  requirements-dev36.txt  requirements.txt  setup.cfg  setup.py  temp.json  test.py
.github/workflows/: deploy.yml  python-publish.yml  test.yml
LOCAL/: using_remote_label.py
__redbrick/: __init__.py  client.py  utils.py
__redbrick/api/: api_base.py
__redbrick/dataset/: datapoint_creator.py  loader.py
__redbrick/export/: export_base.py  export_image.py  export_video.py
__redbrick/labelset/: __init__.py  labelset_base.py  loader.py
__redbrick/remote_label/: __init__.py  public.py
docs/: Makefile  cli.rst  conf.py  formats.rst  index.rst  redbrick.common.rst  redbrick.export.rst  redbrick.labeling.rst  redbrick.organization.rst  redbrick.upload.rst  requirements.txt  sdk.rst
docs/Formats/: Annotation types.rst  Taxonomy.rst  index.rst
docs/formats/: annotations.rst  index.rst  storage_method.rst  task.schema.json  task.ts
docs/source/: conf.py  index.rst
examples/: base.py  coco_classes.py  example.py  remote_label.py
examples/torch/: __init__.py  predict.py  redbrick_torch.py  transforms.py
exportrb/: 124719af-1d72-4725-9667-42f29c514c7f.json  26f1e519-2c2f-4cef-aeb6-ae766e11a813.json  277dd8bd-2478-4dfa-9495-81933c91d98e.json  9951c3f5-1c2a-4743-916d-d239d1c347f8.json  cdb44714-7514-424d-8d45-53c0d7599a70.json  summary.json
exportrb/masks/: class-mapping.json
redbrick/: IDEATION.md  VERSION  __init__.py  api.py  api_base.py  base.py  client.py  config.py  dataset.py  logging.py  organization.py  project.py  slicer.py  sort.py  storage_method.py  utils.py  version.py  version_check.py  workspace.py
redbrick/api/: __init__.py  api.py
redbrick/cli/: __init__.py  cli_base.py  project.py  public.py
redbrick/coco/: __init__.py  bbox.py  bbox_test.py  categories.py  categories_test.py  coco_main.py  polygon.py  polygon_test.py
redbrick/common/: __init__.py  cli.py  client.py  config.py  constants.py  context.py  dataset.py  entities.py  enums.py  export.py  labeling.py  learning.py  member.py  project.py  settings.py  stage.py  storage.py  storage_method.py  upload.py  workforce.py  workspace.py
redbrick/dataset/: __init__.py  datapoint_creator.py  dataset_base.py  loader.py
redbrick/entity/: __init__.py  bounding_box.py  custom_group.py  datapoint.py  datapoint2.py  datum.py  export.py  remote_label._py  remote_label_task._py  segmentation.py  taxonomy.py  taxonomy2.py  video_datapoint.py
redbrick/export/: __init__.py  coco_utils.py  dataset.py  export.py  export_image.py  export_new.py  export_test.py  export_video.py  labelset_iter.py  public.py
redbrick/labeling/: __init__.py  public.py
redbrick/labelset/: __init__.py  labelset_base.py  loader.py  training.py
redbrick/learning/: __init__.py  public.py
redbrick/member/: __init__.py  team.py  workforce.py
redbrick/organization/: __init__.py  basic_project.py
redbrick/remote_label/: public.py
redbrick/repo/: __init__.py  dataset.py  export.py  labeling.py  learning.py  member.py  project.py  settings.py  shards.py  storage.py  storage_method.py  upload.py  workforce.py  workspace.py
redbrick/settings/: __init__.py  public.py
redbrick/stage/: __init__.py  label.py  model.py  review.py
redbrick/storage/: __init__.py  public.py
redbrick/storage_method/: __init__.py  altadb.py  aws_s3.py  azure.py  gcs.py  public.py  redbrick.py
redbrick/tests/: __init__.py  bbox_test.py  classify_test.py  conftest.py  datapoint_test.py  labelset_test.py  remote_label_test.py  segmentation_test.py  taxonomy2_test.py  test_create_upload_export.py  test_create_upload_export_cli.py  utils_test.py
redbrick/torch/: __init__.py  redbrick_torch.py
redbrick/types/: __init__.py  storage_method.py  task.py  taxonomy.py
redbrick/upload/: __init__.py  dataset.py  interact.py  public.py  upload_test.py
strawberry/: 037f7706-c3a6-43f7-aa75-1451ec0bf433.json  03bd662a-4c2c-4c01-852a-ce0b221cae23.json  051a615e-c6ea-47f5-be06-25fbc41f85c1.json  061f19d4-b033-4f19-84dc-bd227c8aa1ee.json  073e43d9-526c-422a-9a4b-58f078f75262.json  09d4325c-e06e-4f94-80d2-588d9d6a739f.json  0b8a6e16-de11-490a-a02f-cfaed085ef3a.json  0c7d3aa2-127b-4a74-9d3c-a3a5b488fac3.json  0eed3770-4daa-46d3-a9e4-7c8c2e90fb3b.json  111d35d9-60aa-482d-bf1a-9dbf4eac4c0e.json  118f7063-e980-4cae-9b6a-8e315bb8c815.json  13410d57-731d-4bc2-b936-80388285de6e.json  198e6cf7-bf21-4e7c-89bf-da5be76f22a0.json  1c0bd191-dfdc-45f7-a0df-622da29f2c9e.json  1cc447f6-3d80-4c8e-8348-a6f439f84c41.json  1cf24148-635d-442d-b838-ad26735fd526.json  1e624102-f8c0-4f1a-a94f-9dd7e1207fc7.json  2235def2-7d3a-4552-88e1-c143bae92819.json  228f12bf-a657-41f0-b533-8b699ac8df8e.json  26bab45e-06f8-4fb7-8e65-f2115d1a3790.json  28776aaf-50bd-4a51-8962-fc93f7b72287.json  28f89999-f889-4db2-8193-8d9b092e262a.json  292a771c-ae5d-4330-a34a-16766753c72c.json  29fd0e56-201b-424d-b660-9387edd06c75.json  2ab94241-b245-4a44-8283-0db2b0052946.json  2d8bb50b-f67d-4cbb-a2c1-59204dd422a2.json  300a708d-b7dd-4bbe-8581-2a0050864ec8.json  33ea11db-d8a7-4ffc-b287-892aa0fbe46b.json  355708db-06d9-4353-9b57-3c11678a4f80.json  35f3f6ea-9a4d-48ea-8cd9-721d7268e6cd.json  362035d6-60dc-4ec1-b761-5b6435b5c6ce.json  36a965bb-e6ef-40a5-9941-207d724a3430.json  38889990-4d27-461e-b026-4a222984c06c.json  393f80cf-759e-4441-a58b-cf4420663d81.json  3ad916ea-9578-4773-89c5-4e45537f0c75.json  3b282012-9886-4a1b-b771-cb5cc5cbd6a3.json  3ebd5f4c-8847-4b5b-b2d2-e284fe3debd2.json  3f3c12a5-2084-4ff6-b9a7-9138c68807ae.json  4088fc0a-6402-4a1b-878b-3f345791e411.json  42981097-e276-4f92-b2b0-d2f9bf73ab79.json  (+121 more)
test_mask/: 9e57db27-3034-4114-aaab-155023ded6b1.png000  datapoint_map.json
tests/: __init__.py  bbox_test.py  classify_test.py  conftest.py  image_test.py  labelset_test.py  segmentation_test.py  taxonomy2_test.py  test_export.py  utils_test.py  video_test.py
(+140 files in other folders)
