
[project]
name = "redbrick-sdk"
description = "RedBrick platform Python SDK!"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8,<3.13"
keywords = ["redbrick"]
dependencies = [
    "aiohttp<=3.9.3,>=3.7.4",
    "dicom2nifti<=2.4.10",
    "inquirerpy<=0.3.4,>=0.3.3",
    "natsort<=8.4.0,>=8.0.2",
    "nest-asyncio<=1.5.8,>=1.5.4",
    "nibabel<=5.2.0,>=3.2.2",
    "numpy<=1.26.3,>=1.15",
    "packaging<=23.2",
    "Pillow<=10.2.0,>=9.0.1",
    "python-dateutil<=2.8.2",
    "requests<=2.31.0,>=2.23.0",
    "Rich<=13.7.0",
    "rt-utils<=1.2.7",
    "shtab<=1.6.5",
    "tenacity<=8.2.3",
    "tqdm<=4.66.1,>=4.50.0",
]
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
redbrick = "redbrick.cli:cli_main"

[project.urls]
Homepage = "https://www.redbrickai.com"
Documentation = "https://redbrick-sdk.readthedocs.io"
Changelog = "https://github.com/redbrick-ai/redbrick-sdk/releases"

[project.optional-dependencies]
dev = [
    "build<=1.0.3",
    "twine<=4.0.2",
    "wheel<=0.42.0",
    "pytest<=7.4.3",
    "black<=24.1.1",
    "mypy<=1.8.0",
    "mypy-extensions<=1.0.0",
    "pylint<=3.0.3",
    "pycodestyle<=2.11.1",
    "pydocstyle<=6.3.0",
    "flake8<=6.1.0",
    "pytest-cov<=4.1.0,>=4.0.0",
    "pytest-asyncio<=0.23.2",
    "pytest-randomly<=3.15.0",
    "pytest-xdist<=3.5.0",
    "pytest-xdist[psutil]<=3.5.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
version = {attr = "redbrick.__version__"}
readme = {file = ["README.rst"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["redbrick*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
redbrick = ["py.typed"]
