[metadata]
version = attr: redbrick.__version__

[tool:pytest]
addopts = --strict-markers
        #   -p no:warnings
          --cov-config=./setup.cfg
        #   --cov
        #   --quiet
          --ignore=env
          --ignore=node_modules
          --ignore=LOCAL
        #   --pydocstyle
        #   --black
        #   --mypy
        #   --pylint
        #   --flake8
        #   --pylint-rcfile=setup.cfg
        #   --pycodestyle
        #   --eradicate
         -n auto


markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    unit: unit tests of source code (fast)
    smoke: smoke tests


[pydocstyle]
match= .*.py
[pycodestyle]
max-line-length = 100
ignore=E203, W503
[pylint]
disable=too-few-public-methods,
        too-many-arguments,
        too-many-instance-attributes,
        bad-continuation,
        duplicate-code,
        consider-using-f-string,
        logging-fstring-interpolation,
        logging-format-interpolation,
        logging-not-lazy,


[flake8]
max-complexity = 50
# disabled
max-line-length = 200
ignore =
    # ignore these, likely redundant with pylint, only being raised for test files
    F403,
    F401,
    # this is in direct conflict with the way black formats
    W503,
    # in accorrdance with pydocstyle
    E203,
    F405,
[coverage:run]
omit=env/*


[mypy-numpy]
ignore_missing_imports=True
[mypy-tqdm.asyncio]
ignore_missing_imports=True
[mypy-tqdm]
ignore_missing_imports=True
[mypy-nest_asyncio]
ignore_missing_imports=True
